fixed scrollbar

--- a/app/assets/stylesheets/accounts.scss
+++ b/app/assets/stylesheets/accounts.scss
@@ -301,7 +301,7 @@
 
 .account-card {
   padding: 14px 10px;
-  background: $color5;
+  background: rgba(1, 1, 1, 0.7);
   border-radius: 4px;
   text-align: left;
   box-shadow: 0 0 15px rgba($color8, 0.2);
