--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,17 +64,17 @@ table {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: lighten($color1, 4%);
+  background: lighten($color2, 4%);
   border: 0px none $color5;
   border-radius: 50px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: lighten($color1, 6%);
+  background: lighten($color3, 6%);
 }
 
 ::-webkit-scrollbar-thumb:active {
-  background: lighten($color1, 4%);
+  background: lighten($color2, 4%);
 }
 
 ::-webkit-scrollbar-track {
@@ -84,11 +84,11 @@ table {
 }
 
 ::-webkit-scrollbar-track:hover {
-  background: $color1;
+  background: $color2;
 }
 
 ::-webkit-scrollbar-track:active {
-  background: $color1;
+  background: $color2;
 }
 
 ::-webkit-scrollbar-corner {
