--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -811,10 +811,6 @@ a.status__content__spoiler-link {
   overflow: hidden;
 }
 
-.column:first-child, .drawer:first-child {
-  margin-left: 10px;
-}
-
 .column:last-child, .drawer:last-child {
   margin-right: 10px;
 }
